fix(pagination): center-align number input text in  pagination context, add border back in (#816)

--- a/src/components/reusable/pagination/pagination-navigation-buttons.scss
+++ b/src/components/reusable/pagination/pagination-navigation-buttons.scss
@@ -10,9 +10,17 @@
 }
 
 .page-range {
+  display: inline-flex;
+  align-items: center;
+  gap: 8px;
+
   @media (max-width: calc(42rem - 0.001px)) {
     @include visibility.sr-only;
   }
+}
+
+.page-number-input {
+  --kyn-number-input-text-align: center;
 }
 
 span[slot='icon'] {
